# simple_nerf

./: .gitignore  Embedder.py  NerfNetwork.py  README.md  ReadData.py  VolumeRendering.py  imghalf.py  pyproject.toml  train.py
